tooling/nargo_cli/tests/snapshots/execution_success/no_predicates_basic/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: Field, y: pub Field) {
    basic_check(x, y);
}

#[no_predicates]
fn basic_check(x: Field, y: Field) {
    assert(x != y);
}
