tooling/nargo_cli/tests/snapshots/execution_success/no_predicates_basic/execute__tests__force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VUSw6CMBCdSolWoguNbvQQRVBYstCDNBLOwdFNw1SGWlzo9CWkJTN98+b1I2CAwM9C4riAT7icBkf9H3JGLh1Tp4ik8y2UzgXMG3/GUcF0k2w8YWxYBTRx8de6vKlAf4z6C0U4I/BfHL+Mw6+XyHPvp/zg1d3A9PLSNS5GL/IDYyuMu/kW58rji7HvVBO3b/uAflcrw16PxA/qa/plbcgXYNQtvHoyoI/WT738g6cz1rncef3TWhmM75Ls+etX9eCTRdKPPjh/KCSJ0/wT/q9n+mh+1NlVJu8K05mradvyaXyfLOg5fAEWXxueeQcAAA==",
  "debug_symbols": "dZBNDoMgEIXvMmsWQkO1XsUYgzoaEoIEoUljuHvBn1YXbuYxzHxvkrdAj60fG6mHaYayWqC1Uik5NmrqhJOTjr8LZKlQDiUjQJ+b5JsUm7xWYXGRhUDgoBtnERN8sotHjLCoHZTaK0XgLZRfl2Yj9KpO2DjNCKDuo0bDQSpMr0D+dHaPPoqd5fwH8ytN72nK+I7TB73wdexEJ+0lnpCcrBStwr0dvO5OU/cxx+SI19ipw95bTE6njGOtGCMsr0O69gU=",
  "file_map": {
    "50": {
      "source": "fn main(x: Field, y: pub Field) {\n    basic_check(x, y);\n}\n\n#[no_predicates]\nfn basic_check(x: Field, y: Field) {\n    assert(x != y);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
