tooling/nargo_cli/tests/snapshots/execution_success/no_predicates_basic/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: Field, v1: Field):
    (no terminator instruction)
}
